--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "date-fns": "^2.8.1",
     "moment": "^2.24.0",
+    "prettier": "1.19.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-redux": "7.1.3",
+    "react-scripts": "3.3.0",
+    "redux": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
