--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@types/chart.js": "^2.9.7",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "classnames": "2.2.6",
     "date-fns": "^2.8.1",
     "moment": "^2.24.0",
+    "prettier": "1.19.1",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "typescript": "3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
